--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true,
+    "strict": true, // Added "strict" option
     "strictNullChecks": true,
     "noImplicitAny": true,
     "strictBindCallApply": true,
