--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/serve-static": "^4.0.0",
     "axios": "^1.4.0",
     "cache-manager": "^5.2.3",
+    "hbs": "^4.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
