--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": " npx tailwindcss -i ./src/input.css -o ./public/style.css --minify && nest build",
+    "build": "npm run build:css && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start -b swc",
     "start:dev": "nest start -b swc --watch",
     "start:debug": "nest start -b swc --debug --watch",
     "start:prod": "node dist/main",
+    "build:css": "tailwindcss --input ./src/input.css --output ./public/style.css --minify",
+    "start:dev:css": "tailwindcss --input ./src/input.css --output ./public/style.css --watch --poll",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
