--- a/package.json
+++ b/package.json
@@ -1,26 +1,5 @@
 {
-  "name": "moon-info",
-  "version": "0.0.1",
-  "description": "",
   "author": "",
-  "private": true,
-  "license": "UNLICENSED",
-  "scripts": {
-    "build": "npm run build:css && nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start -b swc",
-    "start:dev": "nest start -b swc --watch",
-    "start:debug": "nest start -b swc --debug --watch",
-    "start:prod": "node dist/main",
-    "build:css": "tailwindcss --input ./src/input.css --output ./public/style.css --minify",
-    "start:dev:css": "tailwindcss --input ./src/input.css --output ./public/style.css --watch --poll",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
-  },
   "dependencies": {
     "@nestjs/axios": "^3.0.0",
     "@nestjs/cache-manager": "^2.1.0",
@@ -35,6 +14,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
+  "description": "",
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
@@ -63,20 +43,40 @@
     "typescript": "^5.1.3"
   },
   "jest": {
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "../coverage",
     "moduleFileExtensions": [
       "js",
       "json",
       "ts"
     ],
     "rootDir": "src",
+    "testEnvironment": "node",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
-  }
+    }
+  },
+  "license": "UNLICENSED",
+  "name": "moon-info",
+  "private": true,
+  "scripts": {
+    "build": "npm run build:css && nest build",
+    "build:css": "tailwindcss --input ./src/input.css --output ./public/style.css --minify",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "start": "nest start -b swc",
+    "start:debug": "nest start -b swc --debug --watch",
+    "start:dev": "nest start -b swc --watch",
+    "start:dev:css": "tailwindcss --input ./src/input.css --output ./public/style.css --watch --poll",
+    "start:prod": "node dist/main",
+    "test": "jest",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:watch": "jest --watch"
+  },
+  "version": "0.0.1"
 }
