style: prettier format

--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "start:dev:css": "tailwindcss --input ./src/input.css --output ./public/style.css --watch --poll",
     "start:prod": "node dist/main",
     "test": "jest",
-    "test:cov": "jest --coverage",
+    "test:coverage": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "test:watch": "jest --watch"
