--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/serve-static": "^4.0.0",
-    "axios": "^1.4.0",
+    "axios": "^1.5.0",
     "cache-manager": "^5.2.3",
     "hbs": "^4.2.0",
     "reflect-metadata": "^0.1.13",
@@ -67,10 +67,8 @@
     "build:css": "tailwindcss --input ./src/input.css --output ./public/style.css --minify",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "start": "nest start ",
-    "start:debug": "nest start --debug --watch",
-    "start:dev": "nest start --watch",
-    "start:dev:css": "tailwindcss --input ./src/input.css --output ./public/style.css --watch --poll",
+    "start": "nest start --debug --watch",
+    "start:css": "tailwindcss --input ./src/input.css --output ./public/style.css --watch --poll",
     "start:prod": "node dist/main",
     "test": "jest",
     "test:cov": "jest --coverage",
